apps/auth/06_ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: auth
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - auth.ankhmorpork.thaum.xyz
    secretName: auth-tls
  rules:
  - host: auth.ankhmorpork.thaum.xyz
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy
          servicePort: 4180
        #path: /oauth2
